Hack so that make-setup-test-clean works

--- a/test-basic-https-syslog-drain-functionality/Makefile
+++ b/test-basic-https-syslog-drain-functionality/Makefile
@@ -1,16 +1,19 @@
 .DEFAULT: default
-SHELL=bash
+.PHONY: setup test clean create-generator create-service create-sink delete-generator delete-service delete-sink generate-traffic check-logs
+
+SHELL := bash
 STABLE_RANDOM := $(shell echo $$RANDOM)
 
 default:
 	@echo 'First run: "make setup test".'
 	@echo 'Repeat the test: "make test".'
 	@echo 'Afterwards: "make clean".'
+	@echo 'Or everything at once: "make setup test clean".'
 
 setup: announce-starting-setup create-sink
-clean: announce-starting-clean-up delete-sink delete-generator delete-service
+clean: announce-starting-clean-up delete-sink1 delete-generator1 delete-service1
 test: \
-  announce-cleaning-up-previous-tests delete-generator delete-service \
+  announce-cleaning-up-previous-tests delete-generator2 delete-service2 \
   announce-instantiating-test-entities create-service create-generator \
   announce-generating-log-traffic generate-traffic \
   announce-checking-for-unique-syslog-traffic check-logs announce-logs-found announce-tests-completed-successfully
@@ -22,11 +25,11 @@ create-service:
 	  -l https://$$(cf app test-log-sink | awk '/^urls:/{print $$2}')/TEST-LOG-PATH/$(STABLE_RANDOM)
 create-generator:
 	cf push -f manifest.yml.log-generator
-delete-sink:
+delete-sink%:
 	cf delete test-log-sink -f -r
-delete-generator:
+delete-generator%:
 	cf delete test-log-generator -f -r
-delete-service:
+delete-service%:
 	cf delete-service test-log-service -f
 
 generate-traffic: export GENERATOR_FQDN=$(shell cf app test-log-generator | awk '/^urls:/{print $$2}')
